<resources>
    <string name="app_name">B·VISION</string>

    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="splash">splash</string>
    <string name="upgrade">Upgrade</string>
    <string name="skip">skip</string>
    <string name="signin">Signin</string>
    <string name="signup">Signup</string>
    <string name="signout">Signout</string>
    <string name="reset">Reset</string>
    <string name="email">email</string>
    <string name="send">Send</string>
    <string name="username">username(6~20)</string>
    <string name="password">password(6~20)</string>
    <string name="forgot_password">forgot password?</string>
    <string name="phone">cell phone</string>
    <string name="icon">icon</string>
    <string name="notice">Notice</string>
    <string name="stop_publish">Stop publish and exit?</string>
    <string name="switch_camera">switch_camera</string>
    <string name="play_pause">play_pause</string>
    <string name="live_title">LiveTitle(default value is your username when no type in)</string>
    <string name="live_message">LiveMessage(type in here, audiences will see this in play screen)</string>
    <string name="exit_notice">Press back key down to exit</string>
    <string name="push_url_error">Signin error, please signin again</string>
    <string name="click_to_edit">click to edit</string>
    <string name="no_signin">No Signin</string>
    <string name="refresh">pull down page to refresh</string>
    <string name="no_data">No data</string>
    <string name="no_network">no network connect</string>
    <string name="check_your_network_status">check your network status</string>

    <array name="resolutions">
        <item>360P</item>
        <item>480P</item>
        <item>720P</item>
    </array>
    <array name="filters">
        <item>NONE</item>
        <item>COOL</item>
        <item>WARM</item>
        <item>SUNRISE</item>
        <item>SUNSET</item>
        <item>BEAUTY</item>
        <item>EARLYBIRD</item>
        <item>EVERGREEN</item>
        <item>ROMANCE</item>
        <item>TENDER</item>
        <item>VALENCIA</item>
        <item>WALDEN</item>
    </array>
</resources>
