<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <android.support.v4.widget.Space
        android:id="@+id/sp"
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    
    <EditText
        android:drawableStart="@drawable/ic_person_outline_pink_400_24dp"
        android:layout_below="@id/sp"
        android:id="@+id/etUsername"
        android:textSize="18sp"
        android:hint="@string/username"
        android:textColorHint="@color/colorGray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <android.support.v4.widget.Space
        android:layout_below="@id/etUsername"
        android:id="@+id/sp1"
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    
    <EditText
        android:id="@+id/etPassword"
        android:layout_below="@id/sp1"
        android:textSize="18sp"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_lock_outline_pink_400_24dp"
        android:inputType="textPassword"
        android:textColorHint="@color/colorGray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.Space
        android:id="@+id/sp2"
        android:layout_below="@id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:id="@+id/tvForgot"
        android:layout_below="@+id/sp2"
        android:text="@string/forgot_password"
        android:textStyle="italic"
        android:gravity="right"
        android:autoLink="none"
        android:textColor="@color/colorGray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.Space
        android:id="@+id/sp3"
        android:layout_below="@id/tvForgot"
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/btSignIn"
        android:layout_below="@id/sp3"
        android:text="@string/signin"
        android:textColor="@android:color/white"
        android:background="@drawable/bt_sign_in"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/tvSignUp"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorAccent"
        android:textStyle="italic"
        android:textSize="14sp"
        android:gravity="center"
        android:text="@string/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>