<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <android.support.v4.widget.Space
        android:id="@+id/sp"
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    
    <EditText
        android:drawableStart="@drawable/ic_person_outline_pink_400_24dp"
        android:layout_below="@id/sp"
        android:id="@+id/etUsername"
        android:textSize="18sp"
        android:hint="@string/username"
        android:textColorHint="@color/colorGray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <android.support.v4.widget.Space
        android:layout_below="@id/etUsername"
        android:id="@+id/sp1"
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    
    <EditText
        android:drawableStart="@drawable/ic_email_pink_400_24dp"
        android:id="@+id/etEmail"
        android:layout_below="@id/sp1"
        android:textSize="18sp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorGray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.Space
        android:id="@+id/sp2"
        android:layout_below="@id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/btReset"
        android:layout_below="@id/sp2"
        android:text="@string/send"
        android:textColor="@android:color/white"
        android:background="@drawable/bt_sign_in"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>