<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_gravity="start"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fl1"
        android:background="@color/colorAccent"
        android:layout_width="0dp"
        android:layout_height="220dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_gravity="center"
            android:id="@+id/ivPerson"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="2dp"
            android:src="@drawable/img_holder_icon"
            android:layout_width="140dp"
            android:layout_height="140dp" />

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvNoSignin"
            android:text="@string/no_signin"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

    <TextView
        android:id="@+id/tvSetting"
        android:drawableLeft="@drawable/ic_settings_blue_grey_900_36dp"
        android:background="@drawable/bg_item_navigation"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/settings"
        android:textSize="18sp"
        android:layout_width="0dp"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/fl1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/tvSignOut"
        android:drawableLeft="@drawable/ic_exit_to_app_blue_grey_900_36dp"
        android:background="@drawable/bg_item_navigation"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/signout"
        android:textSize="18sp"
        android:padding="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvSetting"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="9dp" />

</android.support.constraint.ConstraintLayout>